# tomator

./: CMakeLists.txt  README.md  config.cc  config.h  context.h  icons.cc  icons.h  indicator.h  notification.h  shared_ptr.h  states.cc  states.h  tomator.cc  tomator_png.h
